# vectra

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: API_reference.md  README.md  architecture.md
examples/: advanced_operations.py  basic_usage.py  division_error_demo.py  n_dimensional_example.py  operator_examples.py  physics_simulation.py
src/vectors/: __init__.py  operations.py  vector.py
src/vectors_cpp/: python_bindings.cpp  vector_core.cpp  vector_core.h
tests/: __init__.py  conftest.py  test_operations.py  test_vector.py
